@@ -2,4 +2,4 @@ On-the-Fly .NET Compiler Project TODO List
 
 1. Set executing options with flags
 2. Command line parameters overwrites settings given in Xml description file
-3. var next as next command line parameter
+3. Fix temporary files deletion (now - not)
